[package]
name = "rtic-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m         = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt      = "0.7"
stm32f4xx-hal    = { version = "0.21", features = ["stm32f411", "rtic1"] }
rtic             = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics  = { version = "2", features = ["cortex-m-systick"] }
heapless         = "0.8"
defmt            = "0.3"
defmt-rtt        = "0.4"
panic-probe      = { version = "0.3", features = ["print-defmt"] }

[profile.release]
opt-level = "s"
lto        = true
codegen-units = 1
debug      = true

[profile.dev]
opt-level = 1
debug      = true